--- a/src/components/roadmap.scss
+++ b/src/components/roadmap.scss
@@ -20,3 +20,30 @@
   bottom: 69px;
   z-index: -1;
 }
+
+.roadmap__mobile-bg {
+  margin-left: -5%;
+  width: 110%;
+}
+
+.roadmap__chapter {
+  left: 38%;
+  width: 40%;
+}
+
+.roadmap__c1 {
+  top: 18.5%;
+  
+}
+
+.roadmap__c2 {
+  top: 34.5%;
+}
+
+.roadmap__c3 {
+  top: 53.5%;
+}
+
+.roadmap__c4 {
+  top: 75.5%;
+}
