--- a/src/components/who-is-kook.scss
+++ b/src/components/who-is-kook.scss
@@ -1,3 +1,7 @@
+#about {
+  margin-top: 200px;
+}
+
 .who__question-mark {
   top: -76px;
   font-size: 150px;
@@ -62,7 +66,9 @@
 }
 
 .kooks-container {
-  width: 95%;
+  img {
+    width: 100%;
+  }
 }
 
 .kook-img-container {
