--- a/src/components/who-is-kook.scss
+++ b/src/components/who-is-kook.scss
@@ -1,5 +1,5 @@
 #about {
-  margin-top: 200px;
+  margin-top: 100px;
 }
 
 .who__question-mark {
@@ -18,6 +18,12 @@
 .who__img {
   border: 13px black solid;
   width: 80%;
+}
+
+.who__tape {
+  width: 35%;
+  right: -8%;
+  top: -8%;
 }
 
 .who__slides {
