--- a/src/index.scss
+++ b/src/index.scss
@@ -356,6 +356,44 @@ code {
   }
 }
 
+.roadmap__container {
+  margin: 0 auto;
+  width: 80%;
+
+  @include media-breakpoint-down(md) {
+    width: 100%;
+  }
+  
+  .roadmap__bg {
+    width: 100%;
+  }
+}
+
+.roadmap__mid {
+  width: 100%;
+  background: url('../public/roadmap-mid.png') repeat center ;
+  background-size: contain;
+
+  // @include media-breakpoint-down(lg) {
+  //   background: url('../public/roadmap-mid.png') repeat center ;
+  //   background-size: contain;
+  // }
+}
+
+.roadmap__content {
+  width: 50%;
+
+  @include media-breakpoint-down(lg) {
+
+  }
+}
+
+.roadmap__img {
+  display: block;
+  width: 100%;
+}
+
+
 .team__glasses-bg {
   width: 100%;
 }
